--- a/registration.html
+++ b/registration.html
@@ -61,6 +61,13 @@
                         Please provide a valid email address.
                     </div>
                 </div>
+		   < div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid email address.
+                    </div>
+                </div>
 
                 <div class="mb-3">
                     <label for="phone" class="form-label">Phone Number</label>
